Várias alterações feitas

--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,22 @@
+/* GERAL */
 * {
     margin: 0;
     padding: 0;
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     color: #fff;
+}
+
+h2{
+    font-size: 42px;
+}
+
+h3{
+    font-size: 32px;
+}
+
+p{
+    font-size: 17px;
 }
 
 /* SIDEBAR */
@@ -30,6 +43,9 @@
 .nome-foto-fabio {
     text-align: center;
     color: #fff;
+}
+
+.nome-foto-fabio p{
     font-size: 25px;
 }
 
@@ -112,7 +128,11 @@
     border-radius: 50%;
 }
 
-/* FIM SIDEBAR */
+/* MAIN */
+main{
+    background-color: #212529;
+    margin-left: 285px;
+}
 
 /* BANNER */
 .banner{
@@ -120,7 +140,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 280px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/web\ developer\ working\ w.webp");
     background-size: cover;
     background-position: center;
@@ -129,14 +148,80 @@
 }
 
 .banner h1{
-    font-size: 42px;
+    font-size: 62px;
     font-weight: 500;
     text-align: center;
 }
 
 .banner h2{
-    font-size: 62px;
     letter-spacing: 3px;
     font-weight: 700;
     text-align: center;
 }
+
+/* SOBRE MIM */
+.sobre-mim{
+    text-align: center;
+    padding: 20px;
+}
+
+.sobre-mim-titulo{
+    margin-top: 20px;
+    margin-bottom: 70px;
+}
+
+.sobre-mim-titulo h2{
+    margin-bottom: 10px;
+}
+
+#linha-azul{
+    width: 100px;
+    height: 5px;
+    margin: 0 auto;
+    border-radius: 50%;
+    background-color: #0077b6;
+}
+
+.container-sobre-descricao{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#nome-azul{
+    color:#0077b6;
+    font-weight: 700;
+}
+
+.container-sobre-descricao-esquerdo{
+    text-align: left;
+    width: 50%;
+}
+
+.container-sobre-descricao-esquerdo p{
+    line-height: 1.8em;
+}
+
+.container-sobre-descricao-direito{
+    width: 25%;
+}
+
+.container-sobre-descricao-direito ul li{
+    list-style: none;
+    text-align: left;
+    width: 250px;
+    padding: 15px 0;
+    border-bottom: 1px solid #caf0f8;
+    letter-spacing: 1px;
+}
+
+.container-sobre-descricao-direito ul li span{
+    font-weight: 700;
+}
+
+/* .whatsapp-button-sobre-mim{
+    margin-top: 20px;
+    width: 250px;
+    text-decoration: none;
+    justify-content: center;
+} */
