--- a/css/index.css
+++ b/css/index.css
@@ -274,6 +274,7 @@ footer {
 .rodape-sessao {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .rodape-container h4 {
@@ -396,5 +397,53 @@ footer {
     .rodape-titulo {
         margin-top: 0;
         margin-bottom: 50px;
+    }
+}
+
+@media(max-width:767px){
+    /* BANNER */
+    .banner h1{
+        font-size: 50px;
+        line-height: 1.1em;
+    }
+
+    .icon-linguagens svg{
+        width: 60px;
+    }
+
+    /* SOBRE MIM */
+    .sobre-mim-titulo{
+        margin-bottom: 40px;
+    }
+
+    .grid-experiencia img{
+        width: 20px !important;
+    }
+
+    .grid-experiencia tr th {
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    .grid-experiencia tr td {
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    /* FOOTER */
+    .rodape-container-contato{
+        margin-top: 30px;
+    }
+
+    .rodape-container-contato ul li{
+        text-align: center;
+    }
+
+    .rodape-container ul li img{
+        margin-right: 10px;
+    }
+
+    .rodape-titulo{
+        margin-bottom: 40px;
     }
 }
