--- a/css/index.css
+++ b/css/index.css
@@ -149,7 +149,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/web\ developer\ working\ w.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/web\ developer\ working\ 100.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
