--- a/css/index.css
+++ b/css/index.css
@@ -214,7 +214,7 @@ main {
 }
 
 #nome-azul {
-    color: #0077b6;
+    color: #00a7ff;
     font-weight: 700;
 }
 
@@ -246,7 +246,7 @@ main {
 }
 
 .container-sobre-descricao-direito a {
-    color: #0077b6;
+    color: #00a7ff;
     text-decoration: none;
 }
 
