--- a/css/index.css
+++ b/css/index.css
@@ -361,7 +361,7 @@ footer {
     .banner {
         height: 600px;
         padding: 0 20px;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url("../assets/web\ developer\ working\ w.webp");
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url("../assets/web\ developer\ working\ 100.webp");
     }
 
     .banner h1 {
