Ajustando banner no mobile

--- a/css/index.css
+++ b/css/index.css
@@ -430,6 +430,10 @@ footer {
     }
 
     /* BANNER */
+    .banner {
+        height: 500px;
+    }
+
     .banner h1 {
         font-size: 40px;
         letter-spacing: 1px;
