--- a/css/index.css
+++ b/css/index.css
@@ -215,7 +215,7 @@ main {
 }
 
 #nome-azul {
-    color: #00a7ff;
+    color: #00ceff;
     font-weight: 700;
 }
 
@@ -247,7 +247,7 @@ main {
 }
 
 .container-sobre-descricao-direito a {
-    color: #00a7ff;
+    color: #00ceff;
     text-decoration: none;
 }
 
