--- a/css/index.css
+++ b/css/index.css
@@ -340,14 +340,14 @@ footer {
 
     /* MENU HAMBURGER */
     .botao-menu-hamburguer{
-        position: absolute;
+        position: fixed;
         top: 10px;
         right: 10px;
         display: block;
     }
 
     .menu-hamburger{
-        position: absolute;
+        position: fixed;
         overflow: hidden;
         top: 60px;
         right: 20px;
