Sessao Projetos Ajustes

--- a/css/index.css
+++ b/css/index.css
@@ -285,8 +285,6 @@ main {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
 }
 
 .grid-portfolio{
@@ -317,7 +315,7 @@ main {
     justify-content: space-evenly;
     align-items: center;
     height: 0;
-    transition: height 0.5s;
+    transition: height 0.5s ease-in-out;
     overflow: hidden;
 }
 
