--- a/css/index.css
+++ b/css/index.css
@@ -268,6 +268,23 @@ main {
     padding: 5px 30px 5px 10px;
 }
 
+.js-scroll-esquerda {
+    opacity: 0;
+    transform: translate3d(-50px, 0, 0);
+    transition: 0.8s;
+  }
+  
+  .js-scroll-direita{
+    opacity: 0;
+    transform: translate3d(50px, 0, 0);
+    transition: 0.8s;
+  }
+  
+  .js-scroll.ativo {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+
 /* PORTFOLIO */
 .portfolio-sessao {
     background-color: #212529;
